Fix contact submenu on mobile
Fixes #270

--- a/assets/sass/modules/_standard-nav.scss
+++ b/assets/sass/modules/_standard-nav.scss
@@ -189,3 +189,8 @@
         margin-bottom: 0;
     }
 }
+.m-standard-nav .nav-group-display.show {
+    @include medium {
+        display: block;
+    }
+}
